config/templates/manuela/line-dashboard/line-dashboard-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: line-dashboard
  name: line-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: line-dashboard
    deploymentconfig: line-dashboard
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: line-dashboard
        deploymentconfig: line-dashboard
    spec:
      containers:
      - image: line-dashboard:latest
        imagePullPolicy: Always
        name: line-dashboard
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
            - mountPath: /opt/app-root/output/conf/config.json
              name: line-dashboard-configmap-vol
              subPath: config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 438
            name: line-dashboard-configmap
          name: line-dashboard-configmap-vol
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - line-dashboard
      from:
        kind: ImageStreamTag
        name: line-dashboard:latest
    type: ImageChange
