config/templates/manuela/line-dashboard/line-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: line-dashboard
    template: openjdk18-web-basic-s2i
    app.kubernetes.io/part-of: ManuELA
  name: line-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: line-dashboard
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: line-dashboard
        deploymentconfig: line-dashboard
      name: line-dashboard
    spec:
      containers:
      - name: line-dashboard
        image: line-dashboard:latest
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html/conf/config.json
          name: line-dashboard-configmap-vol
          subPath: config.json
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: line-dashboard-configmap-vol
        configMap:
          defaultMode: 438
          name: line-dashboard-configmap
